# squishy

./: .gitignore  README.md  build.py  meson.build  pyproject.toml
pysquishy/: __init__.py  clang.py  squishy.py
pysquishy/libwrap/: wrapper.py
scripts/: set-alternatives.sh
squishy/: __init__.py  clang.py  squishy.py
src/: AggressiveInline.cpp  Check.cpp  meson.build
test/: axssl.c  check.c  check_lib_shouldfail.c  meson.build  test_axssl.py  test_squishy.py
