[tool.poetry]
name = "squishy"
version = "0.1.0"
description = "LLVM pass wrapper library for creating robust shellcode"
authors = ["novafacing <rowanbhart@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.build]
script = "build.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
